# cryptodotfun

./: .gitignore  Cargo.toml  Makefile  README.md  dfx.json  did.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/actions/: db-actions.ts
app/api/test-env/: route.ts
app/blog/: page.tsx
app/connect/: page.tsx
app/dashboard/: page.tsx
app/explore/: page.tsx
app/learn/[id]/: page.tsx
app/nft/marketplace/: page.tsx
app/play/: page.tsx
app/play/games/: page.tsx
app/profile/: page.tsx
app/register/: page.tsx
app/secure/: page.tsx
canisters/: Cargo.toml  Makefile  canister_ids.json  cookies.txt  dfx.json  did.sh
canisters/src/icp_market/: Cargo.toml  icp_market.did
canisters/src/icp_market/src/: errors.rs  lib.rs  types.rs
canisters/src/icp_market/src/constants/: canisters.rs  mod.rs
canisters/src/icp_market/src/queries/: collections.rs  listings.rs  marketplace.rs  mod.rs
canisters/src/icp_market/src/state/: state.rs
canisters/src/icp_market/src/updates/: collections.rs  deploy_collection.rs  marketplace.rs  mod.rs
canisters/src/icp_market/src/utils/: canister_management.rs  helpers.rs  mod.rs  nft.rs  payments.rs  validation.rs
canisters/src/identity-certifier/: main.mo
canisters/src/libs/client/: Cargo.toml  README.md
canisters/src/libs/client/src/: ed25519.rs  lib.rs
canisters/src/libs/client/src/nonce/: mod.rs
canisters/src/libs/types/: Cargo.toml  README.md
canisters/src/libs/types/src/: lib.rs  tests.rs
canisters/src/libs/types/src/lifecycle/: mod.rs
canisters/src/libs/types/src/rpc_client/: mod.rs  tests.rs
canisters/src/libs/types/src/solana/request/: tests.rs
canisters/src/libs/types/src/solana/transaction/: mod.rs  reward.rs
canisters/src/marketplace/: Cargo.toml  marketplace.did
canisters/src/marketplace/src/: lib.rs
canisters/src/marketplace/src/api/: mod.rs
canisters/src/marketplace/src/api/queries/: mod.rs
canisters/src/marketplace/src/api/updates/: mod.rs
canisters/src/marketplace/src/chains/: icp.rs  mod.rs  solana.rs
canisters/src/marketplace/src/mutations/: mod.rs
canisters/src/marketplace/src/queries/: mod.rs
canisters/src/marketplace/src/solana/: candy_machine.rs  mod.rs  solana_wallet.rs
canisters/src/marketplace/src/state/: collections.rs  config.rs  listings.rs  memory.rs  mod.rs
canisters/src/marketplace/src/types/: collection.rs  listing.rs  mod.rs  offer.rs  sale.rs  solana_transaction.rs
canisters/src/marketplace/src/utils/: mod.rs
canisters/src/marketplace/src/x_chain/solana/: candy_machine.rs  interface.rs  mod.rs  solana_wallet.rs
canisters/src/sol_market/: Cargo.toml  sol_market.did
canisters/src/sol_market/src/: lib.rs
canisters/src/sol_market/src/queries/: collections.rs
canisters/src/sol_market/src/state/: state.rs
canisters/src/sol_market/src/updates/: collections.rs  listings.rs
canisters/src/treasury/: Cargo.toml
canisters/src/treasury/src/: lib.rs
canisters/src/types/src/: common.rs  icp.rs  lib.rs  user.rs
canisters/src/users/: Cargo.toml  users.did
canisters/src/users/src/api/: queries.rs  updates.rs
canisters/src/users/src/common/types/: user.rs
canisters/users/src/: lib.rs
canisters/users/src/common/types/: user.rs
client/: next.config.mjs  package.json  pnpm-lock.yaml  vercel.json
client/app/: layout.tsx  not-found.tsx  page.tsx
client/app/actions/: db-actions.ts
client/app/collections/: page.tsx
client/app/earn/: page.tsx
client/app/explore/: page.tsx
client/app/learn/: page.tsx
client/app/play/: loading.tsx
client/app/profile/: page.tsx
client/app/pulse/: page.tsx
client/app/register/: loading.tsx
client/app/test-candy/: page.tsx
client/components/: auth-button.tsx  auth-guard.tsx  chain-selector.tsx  eth-connect.tsx  footer.tsx  loading-modal.tsx  mode-toggle.tsx  navbar.tsx  notification-dropdown.tsx  registration-button.tsx  sol-connect.tsx  sol-sign-in-button.tsx  wallet-connect.tsx  wallet-connection-modal.tsx  wallet-info-modal.tsx
client/components/eth/: eth-connect.tsx
client/components/nft/: DraftCard.tsx  (+1 more)
client/connect-wallet/: index.tsx  types.ts
client/constants/: canisters-config.ts  movement.ts  urls.ts
client/docs/: AI_FEATURES.md  ROADMAP.md  WHITEPAPER.md
client/hooks/: useServerAuth.ts
client/lib/: auth.tsx  candy-machine-db.ts
client/providers/: auth-context.tsx  context.tsx  internetidentity.ts  nfid.ts  siwe-provider.tsx  siws-provider.tsx  solana-providers.tsx  types.ts  useAuth.ts  web3Provider.tsx
client/services/: ApiService.ts  AuthService.ts  AxiosBase.ts  DraftsService.ts  app.config.ts  endpoint.config.ts
client/types/: auth.ts  chains.ts  drafts.ts
components/: animated-hero-text.tsx  auth-button.tsx  mode-toggle.tsx  navbar.tsx  theme-provider.tsx
components/registration/: registration-form.tsx  registration-modal.tsx  registration-stepper.tsx
lib/db/: db.ts
lib/redux/: store.ts
providers/: context.tsx  internetidentity.tsx  nfid.ts  siws-provider.tsx  useAuth.ts  useSessionData.ts
server/: .gitignore  Cargo.toml  PRIVATE_KEY_SECURITY.md  README.md
server/express/: README-AUTH.md  README.md  index.ts  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json
server/express/src/: constants.ts  demo.ts  index.ts  utils.ts
server/express/src/controllers/: authController.ts  healthController.ts
server/express/src/middleware/: authGuard.ts
server/express/src/routes/: authRoutes.ts
server/migrations/: 20250126_create_collection_drafts.sql
server/src/: config.rs  ic_agent.rs  main.rs  redis.rs  routes.rs
server/src/controllers/: auth.rs  drafts.rs  health.rs  mod.rs  protected.rs  uploads.rs  users.rs
server/src/db/: models.rs  pool.rs
server/src/middleware/: auth_guard.rs  mod.rs
server/src/services/sol_bots/: trade.rs
server/src/storage/: mod.rs  r2_client.rs
smart_contracts/icp/: Cargo.toml  Makefile  dfx.json
smart_contracts/movement/: Move.toml  README.md
src/cryptodotfun_backend/: Cargo.toml
src/cryptodotfun_frontend/: package.json  vite.config.js
(+145 files in other folders)
