[workspace]
members = [
    "src/users",
    "src/marketplace",
    "src/uuid",
    "src/types",
    "src/treasury",
    "src/packages/ic_siwb_provider",
    "libs/client",
    "libs/types",
]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0"
ic-stable-structures = "0.7.2"
ic-cdk-macros = "0.18.7"
serde = "1.0.228"
serde_derive = "1.0.219"
serde_bytes = "0.11.17"
sha2 = "0.10.9"
icrc-ledger-types = "0.1.8"
ic-ledger-types = "0.15.0"
ic-cdk-timers = "0.12.2"
hex = "0.4"
num-traits = "0.2"
candid = "0.10.20"
ic-cdk = "0.18.7"
uuid = "1.18.1"
rstest = "0.25.0"
rand = { version = "0.9.2", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }
ciborium = "0.2.1"
ic-certification = "3.0.3"

solana-account = "3.0.0"
solana-account-decoder-client-types = "3.0.0"
solana-client = "3.0.0"
solana-clock = "3.0.0"
solana-commitment-config = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-hash = "3.0.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.0"
solana-message = "3.0.0"
solana-nonce = "3.0.0"
solana-program = "3.0.0"
solana-pubkey = "3.0.0"
solana-reward-info = "3.0.0"
solana-rpc-client-api = "3.0.0"
solana-rpc-client-nonce-utils = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-signature = "3.1.0"
solana-signer = "3.0.0"
solana-system-interface = "2.0.0"
solana-transaction = "3.0.0"
solana-transaction-error = "3.0.0"
solana-transaction-status-client-types = "3.0.0"
spl-associated-token-account-interface = "2.0.0"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.47.0"
tower = "0.5.2"
tower-http = "0.6.6"
url = "2.5"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
