[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = "=1.6.0"
actix-web = "4.4"  # Latest stable version
tokio = { version = "1.0", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization
serde_json = "1.0"  # JSON handling

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
