[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = "=1.6.0"
actix-web = "4.4"  # Latest stable version
actix-web-httpauth = "0.8"  # HTTP authentication middleware
tokio = { version = "1.0", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization
serde_json = "1.0"  # JSON handling
env_logger = "0.11"  # Logging
chrono = { version = "0.4", features = ["serde"] }  # Date/time handling
dotenv = "0.15"  # Environment variables
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }  # Redis client
rand = "0.8"  # Random number generation
hex = "0.4"  # Hex encoding/decoding
futures-util = "0.3"  # Futures utilities

# IC Agent dependencies
ic-agent = "0.37"  # IC agent for communicating with Internet Computer
candid = "0.10"  # For encoding/decoding Candid types

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
