[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
base64ct = "=1.6.0"
actix-web = "4.4" 
actix-web-httpauth = "0.8" 
actix-cors = "0.7" 
tokio = { version = "1.0", features = ["full"] } 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"  
env_logger = "0.11" 
chrono = { version = "0.4", features = ["serde"] }  #
dotenv = "0.15"  
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }  
rand = "0.8"  
hex = "0.4"  
futures-util = "0.3"  

ic-agent = "0.44.2" 
candid = "0.10.20" 

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
aws-sdk-s3 = "1.60"
aws-config = "1.5"
bytes = "1.5"
actix-multipart = "0.7"
