[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
canister_uuid = { path = "../uuid" }
sol_rpc_client = { path = "../libs/client", features = ["ed25519"] }
sol_rpc_types = { path = "../libs/types" }
