[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
canister_uuid = { path = "../uuid" }
bs58.workspace = true
bincode.workspace = true
# Transitive dependency - required for WASM compatibility
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { workspace = true, default-features = false, features = ["custom"] }
ic-ed25519.workspace = true
num.workspace = true
sol_rpc_client = { path = "../libs/client", features = ["ed25519"] }
sol_rpc_types = { path = "../libs/types" }
solana-hash.workspace = true
solana-instruction.workspace = true
solana-message.workspace = true
solana-pubkey = { workspace = true, features = ["curve25519"] }
solana-signature.workspace = true
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-transaction = { workspace = true, features = ["bincode"] }
spl-associated-token-account-interface.workspace = true
borsh = { version = "1.5", default-features = false }
