[package]
name = "sol_market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
hex = { workspace = true }
ic-cdk-timers = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
canister_uuid = { path = "../uuid" }
types = { path = "../types" }
