[package]
name = "sol_rpc_client"
version = "3.0.0"
description = "Client to interact with the SOL RPC canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[package.metadata.docs.rs]
all-features = true

[features]
ed25519 = [
    "ic-ed25519",
    "solana-keypair",
    "solana-message",
    "solana-transaction",
]

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
candid = { workspace = true }
derive_more = { workspace = true }
ic-cdk = { workspace = true }
ic-ed25519 = { workspace = true, optional = true }
ic-error-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sol_rpc_types = { version = "3.0.0", path = "../types" }
solana-account-decoder-client-types = { workspace = true, features = ["zstd"] }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true, optional = true }
solana-message = { workspace = true, optional = true }
solana-nonce = { workspace = true, features = ["serde"] }
solana-pubkey = { workspace = true }
solana-reward-info = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signature = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true, optional = true }
solana-transaction-error = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
solana-keypair = { workspace = true }
solana-transaction = { workspace = true }
tokio = { workspace = true, features = ["full"] }
